--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,52 @@ jobs:
       - uses: codfish/semantic-release-action@v2
         id: semantic
         with:
+          repository_url: ${{ github.repositoryUrl }}
           plugins: |
             [
               ['@semantic-release/commit-analyzer', {
-                "preset": "conventionalcommits"
+                "preset": "conventionalcommits",
+                "presetConfig": {
+                  "types": [
+                    {"type": "feat", "section": "Features"},
+                    {"type": "fix", "section": "Bug Fixes"},
+                    {"type": "chore", "hidden": true},
+                    {"type": "docs", "hidden": true},
+                    {"type": "style", "hidden": true},
+                    {"type": "refactor", "hidden": true},
+                    {"type": "perf", "hidden": true},
+                    {"type": "test", "hidden": true},
+                    {"type": "static", "section": "Static Content"},
+                    {"type": "helm", "hidden": true}
+                  ]
+                },
+                "releaseRules": [
+                  {"type": "static", "release": "patch"},
+                  {"type": "chore", "release": "patch"},
+                  {"type": "helm", "release": false}
+                ]
               }],
               ['@semantic-release/release-notes-generator', {
                 "preset": "conventionalcommits",
-                "writerOpts": {
-                  "footerPartial": "Released by ${{ github.actor }}"
-                }
+                "presetConfig": {
+                  "types": [
+                    {"type": "feat", "section": "Features"},
+                    {"type": "fix", "section": "Bug Fixes"},
+                    {"type": "chore", "hidden": true},
+                    {"type": "docs", "hidden": true},
+                    {"type": "style", "hidden": true},
+                    {"type": "refactor", "hidden": true},
+                    {"type": "perf", "hidden": true},
+                    {"type": "test", "hidden": true},
+                    {"type": "static", "section": "Static Content"},
+                    {"type": "helm", "hidden": true}
+                  ]
+                },
+                "releaseRules": [
+                  {"type": "static", "release": "patch"},
+                  {"type": "chore", "release": "patch"},
+                  {"type": "helm", "release": false}
+                ]
               }],
               ['@semantic-release/github', {
                 "successComment": false
