--- a/helm-chart/.releaserc
+++ b/helm-chart/.releaserc
@@ -1,3 +1,4 @@
+tagFormat: helm-chart-${version}
 plugins:
   - - "@semantic-release/commit-analyzer"
     - releaseRules:
@@ -6,9 +7,8 @@ plugins:
         noteKeywords:
           - MAJOR RELEASE
   - "@semantic-release/release-notes-generator"
-  - - "@semantic-release/github"
+#  - - "@semantic-release/github"
 branches: [
-    {name: 'main'},
     {name: 'master'},
+    {name: 'helm-release-channels', prerelease: true}
   ]
-tagFormat: helm-chart-${version}
