--- a/helm-chart/sefaria-project/templates/rollout/linker.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/linker.yaml
@@ -59,6 +59,7 @@ spec:
             topologyKey: kubernetes.io/hostname
         nodeAffinity:
           {{- include "sefaria.nodeAffinities" . | nindent 10 }}
+      tolerations: {{ toYaml .Values.linker.tolerations | nindent 8 }}
       serviceAccountName: "{{ .Values.linker.serviceAccount }}"
       containers:
       - name: linker
@@ -180,12 +181,14 @@ spec:
         - name: logging-secret
           secret:
             secretName: {{ template "sefaria.secrets.logging" . }}
+            optional: true
         - name: varnish-secret
           secret:
             secretName: {{ template "sefaria.secrets.varnish" . }}
         - name: school-lookup-data
           secret:
             secretName: {{ template "sefaria.secrets.schoolLookup" . }}
+            optional: true
         - name: gunicorn-config
           configMap:
             name: gunicorn-config-{{ .Values.deployEnv }}
