--- a/helm-chart/sefaria-project/templates/rollout/varnish.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/varnish.yaml
@@ -124,6 +124,6 @@ spec:
             secretName: {{ template "sefaria.secrets.varnish" . }}
         - name:  varnish-config
           configMap:
-            name: {{ .Values.deployEnv }}-varnish-config
+            name: {{ .Values.deployEnv }}-varnish-config-{{ .Release.Revision }}
         - emptyDir: {}
           name: workdir
