--- a/helm-chart/sefaria-project/templates/configmap/varnish-config.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/varnish-config.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     deployEnv: "{{ $.Values.deployEnv }}"
     releaseRevision: "{{ $v }}"
-    {{- include "sefaria.labels" . | nindent 4 }}
+    {{- include "sefaria.labels" $ | nindent 4 }}
 data:
   sefaria.vcl: |-
     vcl 4.0;
