--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -43,6 +43,8 @@ jobs:
         with:
           # Fetch entire history. Required for chart-releaser; see https://github.com/helm/chart-releaser-action/issues/13#issuecomment-602063896
           fetch-depth: 0
+      - name: fetch head of branch to ensure semantic can run
+        run: git pull origin $GITHUB_REF
       - name: create release rules
         run: helm-chart/release-rules.sh 
       - uses: cycjimmy/semantic-release-action@v3
