helm(fix): remove obsolete certificate ref instructions

--- a/helm-chart/sefaria-project/templates/secret/origin-il-tls.yaml
+++ b/helm-chart/sefaria-project/templates/secret/origin-il-tls.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.ingress.secrets.originIlTls.data ( eq .Values.deployEnv "prod" ) }}
+{{- if .Values.ingress.secrets.originIlTls.data }}
 apiVersion: v1
 kind: Secret
 metadata:
