--- a/helm-chart/sefaria-project/templates/secret/origin-tls.yaml
+++ b/helm-chart/sefaria-project/templates/secret/origin-tls.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.ingress.secrets.originTls.data ( or ( eq .Values.deployEnv "prod" ) ( eq .Values.deployEnv "democracy" ) ) }}
+{{- if .Values.ingress.secrets.originTls.data }}
 apiVersion: v1
 kind: Secret
 metadata:
