--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Get appVersion
         id: appVersion
         run: |
-          echo "::set-output name=appVersion::$(git describe --match 'v*' --abbrev=0 HEAD --tags)"
+          echo "appVersion=$(git describe --match 'v*' --abbrev=0 HEAD --tags)" >> $GITHUB_OUTPUT
       - name: Download yq
         run: |
           wget -nv -nc -O yq https://github.com/mikefarah/yq/releases/download/v4.20.2/yq_linux_amd64
