--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -23,9 +23,9 @@ jobs:
       - id: check
         run: |
           if [[ "${{ inputs.version }}" == "" ]]; then
-            echo "::set-output name=ref::${{ github.ref_name }}" 
+            echo "ref=${{ github.ref_name }}" >> $GITHUB_OUTPUT 
           else
-            echo "::set-output name=ref::v${{ inputs.version }}" 
+            echo "ref=v${{ inputs.version }}" >> $GITHUB_OUTPUT
           fi
   build-generic:
     needs: workflow-check
@@ -49,7 +49,7 @@ jobs:
           password: ${{ secrets.PROD_GKE_SA_KEY }}
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y%m%d%H%M')"
+        run: echo "date=$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
       - name: Generate image metadata
         id: meta
         uses: docker/metadata-action@v3
@@ -98,7 +98,7 @@ jobs:
           password: ${{ secrets.PROD_GKE_SA_KEY }}
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y%m%d%H%M')"
+        run: echo "date=$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
       - name: Generate image metadata
         id: meta
         uses: docker/metadata-action@v3
