--- a/.github/workflows/weekly.yaml
+++ b/.github/workflows/weekly.yaml
@@ -21,7 +21,7 @@ jobs:
           password: ${{ secrets.DEV_CLOUDBUILD_SA_KEY }}
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y%m%d%H%M')"
+        run: echo "date$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
       - name: Generate image metadata
         id: meta
         uses: docker/metadata-action@v3
