--- a/.github/workflows/continuous.yaml
+++ b/.github/workflows/continuous.yaml
@@ -159,9 +159,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: Authenticate GHA Runner to GCP
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: ${{ secrets.DEV_CLOUDBUILD_SA_KEY }}
+      - name: Setup GCloud
         uses: google-github-actions/setup-gcloud@v0
         with:
-          service_account_key: ${{ secrets.DEV_CLOUDBUILD_SA_KEY }}
           project_id: ${{ secrets.DEV_PROJECT }}
           install_components: 'gke-gcloud-auth-plugin'
       - name: Get branch name
