--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -136,16 +136,22 @@ jobs:
         with:
           ref: ${{ needs.workflow-check.outputs.ref }}
       - name: Authenticate GHA Runner to GCP
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: ${{ secrets.PROD_GKE_SA_KEY }}
+      - name: Setup GCloud
         uses: google-github-actions/setup-gcloud@v0
         with:
-          service_account_key: ${{ secrets.PROD_GKE_SA_KEY }}
           project_id: ${{ secrets.PROD_GKE_PROJECT }}
+          install_components: 'gke-gcloud-auth-plugin'
+      - name: Authenticate GHA Runner To Target Cluster
+        uses: google-github-actions/get-gke-credentials@v0
+        with:
+          cluster_name: ${{secrets.PROD_GKE_CLUSTER}}
+          location: ${{secrets.PROD_GKE_REGION}}
+          project_id: ${{secrets.PROD_GKE_PROJECT}}
       - name: Set up yq
         uses: frenck/action-setup-yq@v1
-      - name: setup helm
-        uses: azure/setup-helm@v3
-      - name: Authenticate GHA Runner To Target Cluster
-        run: gcloud container clusters get-credentials ${{secrets.PROD_GKE_CLUSTER}} --zone ${{secrets.PROD_GKE_REGION}} --project ${{secrets.PROD_GKE_PROJECT}}
       - name: Deploy Production
         run: ./build/ci/production-helm-deploy.sh build/ci/production-values.yaml
         env:
