chore(salesforce-migration): add salesforce-related local settings to helm chart

--- a/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
@@ -177,6 +177,12 @@ data:
     NATIONBUILDER_CLIENT_ID = os.getenv("NATIONBUILDER_CLIENT_ID")
     NATIONBUILDER_CLIENT_SECRET = os.getenv("NATIONBUILDER_CLIENT_SECRET")
 
+    # Integration with Salesforce
+    SALESFORCE_BASE_URL = "https://sefariainc--dev.sandbox.lightning.force.com"
+    SALESFORCE_CLIENT_ID = os.getenv("SALESFORCE_CLIENT_ID")
+    SALESFORCE_CLIENT_SECRET = os.getenv("SALESFORCE_CLIENT_SECRET")
+    SALESFORCE_GRANT_TYPE = "client_credentials"
+
     DISABLE_INDEX_SAVE = False
 
     # Turns off search autocomplete suggestions, which are reinitialized on every server reload
