--- a/helm-chart/sefaria-project/templates/cronjob/trello.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/trello.yaml
@@ -38,6 +38,12 @@ spec:
                 name: local-settings-{{ .Values.deployEnv }}
             - secretRef:
                 name: trello-secret
+            env:
+            - name: SLACK_URL
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "sefaria.secrets.slackWebhook" . }}
+                  key: slack-webhook
             volumeMounts:
               - mountPath: /app/sefaria/local_settings.py
                 name: local-settings
