fix: Disable daily trends computation

--- a/helm-chart/sefaria-project/templates/cronjob/nation-builder-sync.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/nation-builder-sync.yaml
@@ -47,7 +47,7 @@ spec:
             command: ["bash"]
             args: [
               "-c",
-              "/app/run /app/scripts/nation_builder_sync.py"
+              "/app/run /app/scripts/nation_builder_sync.py --sustainers-only"
             ]
           restartPolicy: OnFailure
   successfulJobsHistoryLimit: 1
