helm(fix): typo + spec content in mongo backup scheduling directives

--- a/helm-chart/sefaria-project/templates/cronjob/mongo-backup.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/mongo-backup.yaml
@@ -17,8 +17,9 @@ spec:
           serviceAccount: {{ .Values.backup.mongo.serviceAccount }}
           affinity:
             podAffinity:
-              prefferedDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
+              preferredDuringSchedulingIgnoredDuringExecution:
+              - weight: 1
+                preference:
                   matchExpressions:
                   - key: app
                     operator: In
