helm(feat): add instrumentation gunicorn hooks

--- a/helm-chart/sefaria-project/templates/configmap/gunicorn.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/gunicorn.yaml
@@ -16,7 +16,30 @@ data:
     import structlog
     import re
 
+    {{- if .Values.instrumentation.enabled }}
+    from opentelemetry import trace
+    from opentelemetry.exporter.otlp.proto.grpc.trace_exporter import OTLPSpanExporter
+    from opentelemetry.sdk.resources import Resource
+    from opentelemetry.sdk.trace import TracerProvider
+    from opentelemetry.sdk.trace.export import BatchSpanProcessor
+    {{- end }}
+
     loglevel = "warning"
+    
+    {{- if .Values.instrumentation.enabled }}
+    def post_fork(server, worker):
+        server.log.info("Worker spawned (pid: %s)", worker.pid)
+    
+        resource = Resource.create(attributes={
+            "service.name": "web"
+        })
+    
+        trace.set_tracer_provider(TracerProvider(resource=resource))
+        span_processor = BatchSpanProcessor(
+            OTLPSpanExporter(endpoint="{{.Values.instrumentation.endpoint}}")
+        )
+        trace.get_tracer_provider().add_span_processor(span_processor)
+    {{- end }}
 
     def combined_logformat(logger, name, event_dict):
         if event_dict.get('logger') == "gunicorn.access":
