--- a/helm-chart/sefaria-project/templates/cronjob/rambi-webpages-weekly.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/rambi-webpages-weekly.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: {{ .Values.deployEnv }}-daily-email-notifications
+  name: {{ .Values.deployEnv }}-rambi-update
   labels:
     {{- include "sefaria.labels" . | nindent 4 }}
 spec:
@@ -14,7 +14,7 @@ spec:
       template:
         spec:
           containers:
-          - name: daily-email-notifications
+          - name: rambi-update
             image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
             env:
             - name: REDIS_HOST
