helm(feat): make multiserver conditon configurable

--- a/helm-chart/sefaria-project/templates/configmap/local-settings.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/local-settings.yaml
@@ -22,3 +22,4 @@ data:
   SITE_PACKAGE: {{ .Values.localSettings.SITE_PACKAGE | quote }}
   DEFAULT_FROM_EMAIL: "{{ .Values.localSettings.DEFAULT_FROM_EMAIL }}"
   SERVER_EMAIL: "{{ .Values.localSettings.SERVER_EMAIL }}"
+  MULTISERVER_ENABLED: "{{ .Values.localSettings.MULTISERVER_ENABLED }}"
