--- a/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
@@ -109,7 +109,7 @@ data:
     GEOIPV6_DATABASE = 'data/geoip/GeoLiteCityv6.dat'
 
     # Multiserver
-    MULTISERVER_ENABLED = True
+    MULTISERVER_ENABLED = bool(os.getenv("MULTISERVER_ENABLED", default="True").lower() == "true")
     MULTISERVER_REDIS_SERVER = redisHost
     MULTISERVER_REDIS_PORT = 6379
     MULTISERVER_REDIS_DB = 0
