helm(feat): update instrumentation config

--- a/helm-chart/sefaria-project/templates/configmap/gunicorn.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/gunicorn.yaml
@@ -29,16 +29,8 @@ data:
     {{- if .Values.instrumentation.enabled }}
     def post_fork(server, worker):
         server.log.info("Worker spawned (pid: %s)", worker.pid)
+        from opentelemetry.instrumentation.auto_instrumentation import sitecustomize
     
-        resource = Resource.create(attributes={
-            "service.name": "web"
-        })
-    
-        trace.set_tracer_provider(TracerProvider(resource=resource))
-        span_processor = BatchSpanProcessor(
-            OTLPSpanExporter(endpoint="{{.Values.instrumentation.endpoint}}")
-        )
-        trace.get_tracer_provider().add_span_processor(span_processor)
     {{- end }}
 
     def combined_logformat(logger, name, event_dict):
